--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^2.6.1"
+    "jsonwebtoken": "^8.5.1"
   }
 }
